# Demo-Project

./: .coverage  .dockerignore  .env.test.disk-backup  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  streamlit_app.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
db/: sample_queries.sql  schema.sql  seed.sql
docs/: ac_test_traceability.md  architecture_decision_records.md  assumptions_scope.md  data_design.md  tech_stack_decision_records.md
src/: __init__.py  config.py  consolidation.py  drilldown.py  exceptions.py  exporter.py  logging_config.py  models.py  normalization.py  parsers.py
src/ops_dashboard/: __init__.py  config.py  consolidation.py  exporting.py  io.py  models.py  normalization.py  reporting.py
src/reports/: __init__.py  trending.py  weekly_summary.py
tests/: __init__.py  conftest.py  test_acs.py  test_config.py  test_consolidation.py  test_e2e_streamlit.py  test_exporter.py  test_logging_config.py  test_normalization.py  test_parsers.py  test_trending.py  test_weekly_summary.py
tests/fixtures/: production.csv  shipping.csv
