[tool.poetry]
name = "ops-weekly-summary"
version = "0.1.0"
description = "Weekly operations summary app for production issues, defect trends, and shipping drill-down."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "ops_dashboard", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
streamlit = "^1.41.1"
xlsxwriter = "^3.2.0"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
