[tool.poetry]
name = "demo-project"
version = "0.1.0"
description = "Scaffolding for weekly summary reporting (course project)"
authors = ["you <you@example.com>"]
packages = [
	{ include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.56.0"
pandas = "^2.3.3"
sentry-sdk = "^2.26.1"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.9"
python-dotenv = "^1.2.2"
ruff = "^0.15.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^7.0.0"
pytest-playwright = "^0.7.2"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88  # same as black default

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes: undefined names, unused imports, etc.
    "I",   # isort: import ordering
    "B",   # flake8-bugbear: common bug patterns
    "UP",  # pyupgrade: use modern Python syntax
]
ignore = [
    "E501",  # line too long - handled by formatter, not linter
    "B008",  # do not perform function call in default args (common in FastAPI/Streamlit)
]

# files/dirs to skip
exclude = [
    ".venv",
    "__pycache__",
    "migrations",
    "alembic",
]

[tool.ruff.lint.isort]
known-first-party = ["app", "core", "utils", "services"]  # your own modules

[tool.ruff.format]
quote-style = "double"        # consistent with black
indent-style = "space"
skip-magic-trailing-comma = false
